<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent"
    layout_height="match_parent"
    layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".intro">

        <TextView
            android:id="@+id/txtAppNameIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appName"
            android:textAlignment="center"
            android:textSize="34sp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtVarName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:padding="8dp"
            android:textSize="18sp"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@id/txtAppNameIntro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txtIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/introduction"
            android:textAlignment="gravity"
            android:textSize="19sp"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtVarName"/>

        <Button
            android:id="@+id/btViewDonates"
            android:background="@drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/buttView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtIntro"/>


        <Button
            android:id="@+id/btStart"
            android:background="@drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/buttStar"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btViewDonates"
            app:layout_constraintBottom_toBottomOf="parent"/>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>